@@ -13,7 +13,7 @@ GIFParser::~GIFParser() {
 // loop over input block byte by byte and report state
 DetectState GIFParser::Parse(unsigned char *data, uint64_t len, uint64_t pos, bool last) {
     // To small? 
-    if (pos==0 && len<128) return DISABLE;
+    if (pos==0 && len<32) return DISABLE;
     // Are we in new data block, if so reset inSize and restart
     if (inpos!=pos || pos==0) {
         inSize=0,inpos=pos;
