@@ -10,8 +10,8 @@
 class PDFLzwParser: public Parser {
     uint64_t pLzwp;
     uint64_t info;
-    uint64_t imagePos, lenghtPos;
-    uint32_t lenght;
+    uint64_t imagePos, lenghtPos, heightPos, bitsPos, grayPos;
+    uint32_t lenght, width, height, bits;
     uint32_t buf0, buf1, buf2, buf3, buf4;
     uint64_t i;
     Filetype type;
