@@ -1,8 +1,13 @@
 v140
-    -In tif parser enable lzw type.
+    -In tiff parser enable lzw type.
     -In tga parser detect 8bit RLE compressed images.
     -In codec add 24/32bit image filter for LZW compressed images.
     -Cleanup codec statistics.
+    -In some cases us pdflzw parser as image detector.
+    -Fix exe parser for small input lenghts.
+    -Fix deca parser and fix for small input lenghts.
+    -In gif parser change min input size to 32 bytes.
+    -Add .so extension to virtual exe group.
 v139
     -In tga parser wait for data end.
     -In codec test 24/32 bit image pre-post transfom size.
